finish the profile layout, still have some issue about the spacing

--- a/hew5/public/css/style.scss
+++ b/hew5/public/css/style.scss
@@ -12,6 +12,7 @@ $maincolor3: grey;
 $titlebackground: rgba(255,255,255,0.7); // white with opacity
 $bordercolor: rgba(73, 7, 94, 0.7);    // purple with opacity
 $boxshadow: $bordercolor;
+$email: rgb(32, 62, 220);
 
 /* Fonts */
 $mainfont1: Helvetica;
@@ -171,9 +172,10 @@ $fullwidth: 100%;
 }
 
 .main-content {
-    min-height: 1000px;
-    width: 100%;
+    // min-height: 800px;
     margin-top: -10px;    /* can minimize the gap when scrolling up and down */
+    margin-bottom: 40px;
+    width: 100%;
     background-color: $maincolor1;
     position: relative;
     z-index: 1;
@@ -242,3 +244,86 @@ label {
 
 
 ***          ***/
+.profile-block {
+  // min-height: 500px;
+  background-color: $maincolor2;
+  border: 5px solid $maincolor3
+}
+
+@media screen and (min-width: 1200px) {
+  .profile-image {
+    padding: 40px;
+    text-align: center;
+    width:250px;
+    height:250px;
+    border-radius: 50%;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .profile-image {
+    padding: 30px;
+    text-align: center;
+    width:150px;
+    height:150px;
+    border-radius: 50%;
+  }
+}
+
+.row-space {
+  padding: 20px 40px;
+  text-align: left;
+  font-weight: bold;
+}
+
+.row-message {
+  padding: 10px 40px;
+  text-align: left;
+}
+
+.big-name {
+  font-family:$mainfont1, serif;
+  font-size: 2.5em;
+  font-weight: bold;
+}
+
+#position {
+  font-family:$mainfont1, serif;
+  font-size: 1em;
+  font-weight: bold;
+}
+
+#email {
+  text-align: left;
+  font-family:$mainfont1, serif;
+  font-size: 1em;
+  color: $email;
+}
+
+#bio-title {
+  font-family:$mainfont1, serif;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+#bio-message {
+  font-family:$mainfont1, serif;
+  font-size: 1em;
+}
+
+
+/***    ***
+
+    footer
+
+***      ***/
+
+.footer {
+  margin:20px auto;
+  // height:40px;
+  padding:20px;
+  text-align: center;
+  font-size: 0.8em;
+  background-color: $maincolor2;
+  color: black;
+}
